package alliswell.pattern.behavior.state;

/**
 * 抽象状态
 *
 * @author chengxs
 * @date 2020/11/10
 */
public abstract class State {

    public abstract void handle(Context context);
}
