@startuml
title __**状态模式**__\n

note as N1
**定义**：定义一个用于创建对象的接口，让子类决定实例化哪一个类。使一个类的实例化延迟到其子类
**适用**：当一个类不知道它所必须创建的对象的类的时候
end note

newpage

class Context {
- State state
+ request()
}
class State {
+  handle()
}
class ConcreteState {
+  handle()
}

Context o-right-> State
ConcreteState -up-|> State

note as cn
维护一个State子类的实例，
这个实例定义为当前状态
end note
Context -up-> cn

note as sn
抽象状态类，定义一个接口以封装与Context
的一个特定状态相关的行为
end note
State -up-> sn

note as csn
具体状态类，实现一个接口以封装与Context
的一个状态相关的行为
end note
ConcreteState --> csn

@enduml